<resources>
    <string name="app_name">FitpeoDemoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Nora Kim</string>
    <string name="address_name">Floor 1,Boston</string>
    <string name="robin">Robin</string>
    <string name="date_text">Today, June 11</string>
    <string name="title_text"><![CDATA[Quarter 3 Product & Engineering Kickoff...]]></string>
    <string name="meeting_details">Meeting in 11 min at 11 am</string>
    <string name="no_of_attendees">6 attendees in office</string>
    <string name="_3_more_events_later">3 more events later</string>
    <string name="get_a_desk_for_next_week">Get a desk for next week</string>
    <string name="add_a_space">Add a space</string>
    <string name="_6_attendees_wll_be_in">6 attendees wll be in</string>
    <string name="pass_details">Pass details</string>
    <string name="notes">Notes</string>
    <string name="offices">Offices</string>
    <string name="location">Location</string>
    <string name="boston_hq">Boston HQ</string>
    <string name="sales_and_marketing">Sales and marketing</string>
    <string name="work_area">Work area</string>
    <string name="desk">Desk</string>
    <string name="view_on_map">View On map</string>
    <string name="schedule">Schedule</string>
    <string name="you_are_the_first_people_back_in_the_office_n_mind_the_signs_put_up_and_complete_your_n_checkpoint_daily"> You are the first people back in the office!\n Mind the signs put up and complete your\n checkpoint daily.</string>
    <string name="peoplefragment">PeopleFragment</string>
    <string name="officefragment">OfficeFragment</string>
    <string name="pass">Pass</string>
    <string name="office">Office</string>
    <string name="people">People</string>
    <string name="permissions">Permissions</string>
    <string name="desk_booking">Desk booking</string>
</resources>