<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">


    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/user_info_card"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/cardBgColor"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/date_text_view"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/avatar_female"
                app:civ_border_color="#FF000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.077"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.164" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/user_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/user_name"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/profile_image"
                app:layout_constraintTop_toTopOf="@id/profile_image" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/address_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/address_name"
                android:textColor="@color/textColor"
                app:layout_constraintStart_toEndOf="@id/profile_image"
                app:layout_constraintTop_toBottomOf="@id/user_name_text" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name_text"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/robin"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/profile_image"
                app:layout_constraintTop_toBottomOf="@+id/address_name_text"
                app:layout_constraintVertical_bias="0.778" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:alpha="0.7"
                android:background="@drawable/info_button"
                app:cornerRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.813"
                app:layout_constraintStart_toEndOf="@+id/address_name_text"
                app:layout_constraintTop_toTopOf="@id/user_name_text" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/date_text"
        android:textColor="@color/secondary_gray_700"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="@id/user_info_card"
        app:layout_constraintTop_toBottomOf="@id/user_info_card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/details_card_view"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/date_text_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/heading_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="176dp"
                android:text="@string/title_text"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/timing_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/meeting_details"
                android:textColor="@color/secondary_gray_700"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/heading_text"
                app:layout_constraintTop_toBottomOf="@id/heading_text" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/attendees_no_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawableStart="@drawable/office_icon"
                android:drawablePadding="10dp"
                android:text="@string/no_of_attendees"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@id/heading_text"
                app:layout_constraintTop_toBottomOf="@id/timing_details" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_avatars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:padding="10dp"

                android:paddingStart="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/attendees_no_details"
                app:layout_constraintTop_toBottomOf="@id/attendees_no_details" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:paddingBottom="5dp"
                android:text="@string/add_a_space"
                app:cornerRadius="10dp"
                app:layout_constraintStart_toStartOf="@id/heading_text"
                app:layout_constraintTop_toBottomOf="@id/recycler_view_avatars" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/plan_ahead_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3_more_events_later"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:drawablePadding="4dp"
        android:textColor="@color/secondary_gray_700"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintTop_toBottomOf="@id/details_card_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/heading2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Plan Ahead"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/secondary_gray_700"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/date_text_view"
        app:layout_constraintTop_toBottomOf="@id/plan_ahead_text"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/next_plan_card"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:elevation="20dp"
        app:layout_constraintTop_toBottomOf="@id/heading2_text"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="60dp"
                android:text="@string/get_a_desk_for_next_week"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.091"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.444" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/attendees2_no_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawableStart="@drawable/ic_baseline_people_24"
                android:drawablePadding="10dp"
                android:text="@string/_6_attendees_wll_be_in"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@id/title_text"
                app:layout_constraintTop_toBottomOf="@id/title_text"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/attendees2_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="@id/attendees2_no_details"
                app:layout_constraintTop_toBottomOf="@id/attendees2_no_details"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>