<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PassDetailsFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="164dp"
        android:text="@string/pass_details"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/user_info_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/cancel_button"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:scaleType="fitXY"
        android:src="@drawable/cancel"
        app:layout_constraintBottom_toTopOf="@+id/user_info_card"
        app:layout_constraintEnd_toStartOf="@+id/main_title_text"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/user_info_card"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/cardBgColor"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_title_text"
        app:layout_constraintTop_toBottomOf="@id/main_title_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/avatar_female"
                app:civ_border_color="#FF000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.077"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.164" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/user_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/user_name"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/profile_image"
                app:layout_constraintTop_toTopOf="@id/profile_image" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name_text"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/robin"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/profile_image"
                app:layout_constraintTop_toBottomOf="@+id/user_name_text"
                app:layout_constraintVertical_bias="0.778" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/notes_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/notes"
        android:textColor="@color/secondary_gray_700"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/cancel_button"
        app:layout_constraintTop_toBottomOf="@id/user_info_card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/input_text_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="@id/notes_text_view"
        app:layout_constraintTop_toBottomOf="@id/notes_text_view">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/you_are_the_first_people_back_in_the_office_n_mind_the_signs_put_up_and_complete_your_n_checkpoint_daily"
            android:padding="5dp"
            android:textSize="17sp"
            android:fontFamily="@font/montserrat"
            android:background="@null"
            />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/offices_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/offices"
        android:textColor="@color/secondary_gray_700"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/cancel_button"
        app:layout_constraintTop_toBottomOf="@id/input_text_card" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/offices_card"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="@id/input_text_card"
        app:layout_constraintTop_toBottomOf="@id/offices_text_view"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="156dp"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.109"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.048" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/location_get_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boston_hq"
                android:textColor="@color/secondary_gray_700"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.912"
                app:layout_constraintStart_toEndOf="@+id/location_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintBottom_toTopOf="@+id/work_area_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/location_text"
                app:layout_constraintVertical_bias="0.9"
                tools:layout_editor_absoluteX="0dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/work_area_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/work_area"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/location_text"
                app:layout_constraintTop_toBottomOf="@id/divider_1"
                app:layout_constraintTop_toTopOf="@id/work_area_edit_text" />

            <EditText
                android:id="@+id/work_area_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:text="@string/sales_and_marketing"
                android:textColor="@color/secondary_gray_700"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/work_area_text"
                app:layout_constraintTop_toBottomOf="@id/location_get_text" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="9dp"
                app:layout_constraintTop_toBottomOf="@id/work_area_text" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/desk_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/desk"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@id/work_area_text"
                app:layout_constraintTop_toBottomOf="@id/divider_2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/view_on_map_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="170dp"
                android:layout_marginTop="7dp"
                android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
                android:drawablePadding="3dp"
                android:drawableTint="@color/black"
                android:fontFamily="@font/montserrat"
                android:text="@string/view_on_map"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/desk_text"
                app:layout_constraintTop_toBottomOf="@id/divider_2" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                app:layout_constraintTop_toBottomOf="@id/desk_text" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/schedule_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/schedule"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@id/work_area_text"
                app:layout_constraintTop_toBottomOf="@id/divider_3" />

            <com.example.fitpeodemoapp.dropdown.MultiSpinner
                android:id="@+id/multi_spinner"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/day_text"
                app:layout_constraintTop_toBottomOf="@+id/divider_3" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/day_text"
                android:layout_width="78dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="140dp"
                android:text="Mon,Tue,Fri"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/multi_spinner"
                app:layout_constraintHorizontal_bias="0.725"
                app:layout_constraintStart_toEndOf="@+id/schedule_text"
                app:layout_constraintTop_toBottomOf="@+id/divider_3"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginBottom="10dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/permissions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/offices_card"
        android:text="@string/permissions"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/secondary_gray_700"
        app:layout_constraintStart_toStartOf="@id/offices_text_view"
        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/permissions_text"
        android:layout_marginTop="20dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/desk_booking_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desk_booking"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.055"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/office_hours__text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/desk_booking"
                android:textColor="@color/secondary_gray_700"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.94"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>